--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@rainbow-me/rainbowkit": "^2.1.2",
+    "@reown/appkit": "^1.4.10",
+    "@reown/appkit-adapter-wagmi": "^1.3.11",
     "@tanstack/react-query": "^5.51.1",
     "bs58": "^5.0.0",
     "class-variance-authority": "^0.7.1",
